<resources>
    <string name="app_name">SharedPreferences</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_place">Enter Place</string>
    <string name="enter_gender">Enter Gender</string>
    <string name="save">Save</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
</resources>
